@@ -293,7 +293,7 @@ module ActiveRecord
     # This is especially useful for boolean flags on existing records. The regular +update_attribute+ method
     # in Base is replaced with this when the validations module is mixed in, which it is by default.
     def update_attribute_with_validation_skipping(name, value)
-      @attributes[name] = value
+      self[name] = value
       save(false)
     end
 
