@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed Base#update_attribute to be indifferent to whether a string or symbol is used to describe the name
+
 * Added Base#toggle(attribute) and Base#toggle!(attribute) that makes it easier to flip a switch or flag.
 
     Before: topic.update_attribute(:approved, !approved?)
